--- a/pods.yaml
+++ b/pods.yaml
@@ -18,7 +18,6 @@ images:
       build-context: status_page=../status_page
 
 labels: &labels
-  prometheus.port: 80
   endash.links:
     - name: Status
       port: 80
@@ -36,8 +35,10 @@ containers:
     autoremove: true
     ports:
       5050: 80
+    network: prometheus
     labels:
       <<: *labels
+      prometheus.target: endash-dev:80
     bind_mounts:
       # binding the source directory lets us re-run changes without rebuilding
       src: /src/src
@@ -59,8 +60,10 @@ containers:
       5049: 80
     bind_mounts:
       /run/user/1000/podman/podman.sock: /run/user/podman/podman.sock
+    network: prometheus
     labels:
       <<: *labels
+      prometheus.target: endash-prod:80
     flags:
       host:
         name: Steve
