--- a/shard.yml
+++ b/shard.yml
@@ -2,13 +2,13 @@ name: endash
 version: 0.1.0
 
 authors:
-  - Will Richardson <william.hamish@gmail.com>
+  - Will Richardson <will@willhbr.net>
 
 targets:
   endash:
     main: src/endash.cr
 
-crystal: 1.10.1
+crystal: 1.14.0
 
 license: MIT
 
